--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.1.1",
-    "apollo-server": "^3.3.0",
-    "graphql": "^15.6.0"
+    "apollo-server": "^2.19.0",
+    "bcryptjs": "^2.4.3",
+    "graphql": "^15.6.0",
+    "graphql-subscriptions": "^1.2.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "prisma": "^3.1.1"
